@@ -266,6 +266,7 @@
 	- beecrypt: change local absolute symbols to defines for prelinking.
 	- update ru.po.
 	- fix: handle NOKEY/NOTTRUSTED returns as if OK, always return header.
+	- portability: carry libelf in src rpm, include signal.h.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
